--- a/dolgozat/fejezetek/4_1_1_cargo_toml.tex
+++ b/dolgozat/fejezetek/4_1_1_cargo_toml.tex
@@ -7,7 +7,7 @@ A \texttt{package} kategória legtöbb értéke nem lényeges, mivel ezeket a Ca
 a \url{crates.io}-ra való publikáláskor.
 A mi szempontunkból az egyetlen kitűnő érték az az \texttt{edition}, amivel a Rust 2018-as
 kiadásának használatát kérjük a \texttt{rustc}-től.
-A 2015-ös és a 2018-as kiadás kompatibilis egymással,\cite{rust:editions}
+A 2015-ös és a 2018-as kiadás kompatibilis egymással \cite{rust:editions},
 a legnagyobb előnye a frissítésnek a programozás megkönnyítése az új nyelvi tulajdonságokkal.
 A \texttt{dependencies} kategória leírja a projekt függőségeit, és a függőségek kötelező verziószámát.
 Itt konkrét verziószámokat adtunk meg, de lehetőség van a Cargo-ra hagyni az optimális verziók kiderítését is.
