--- a/dolgozat/fejezetek/4_1_4_osszekapcsolas.tex
+++ b/dolgozat/fejezetek/4_1_4_osszekapcsolas.tex
@@ -1,4 +1,4 @@
-\SubSection{A minimális program összecsatlakoztatása}
+\SubSection{A minimális program elemeinek összekapcsolása}
 
 A minimális IDE elkészítésének befejezéseként utoljára összekapcsoljuk az eddig létrehozott
 metódusokat az \texttt{App} működésével.
