--- a/dolgozat/fejezetek/4_2_cargo.tex
+++ b/dolgozat/fejezetek/4_2_cargo.tex
@@ -1,8 +1,10 @@
 \Section{Cargo parancsok hívása a programból}
 
-\begin{figure}[h]
-    \includegraphics[width=0.8\textwidth]{cargo}
+\begin{figure}[h!]
     \centering
+    \includegraphics[width=0.8\textwidth]{cargo}
+	\caption{Példa egy Cargo parancs futtatására}
+	\label{fig:cargo_window}
 \end{figure}
 
 Egy fejlesztői környezethez viszont nem elégséges az, hogy megtudunk nyitni fájlokat,
