--- a/dolgozat/fejezetek/5_teszt.tex
+++ b/dolgozat/fejezetek/5_teszt.tex
@@ -23,6 +23,8 @@ jelezve, hogy a puffer eltér a várttól -- ebben az esetben nincs fájl a hát
 A megírt metódust megfogjuk hívni a Rozsda IDE-n belül, így a fájlt elmentjük \texttt{hello.rs}
 néven a Rozsda IDE ládájába.
 
+% TODO: Itt a képek lehetnek oldal szélességűek. Mindegyik alá kellene felirat, és be kellene őket hivatkozni valahol a szövegben!
+
 \begin{wrapfigure}{l}{0.35\textwidth}
     \centering
     \includegraphics[width=0.35\textwidth]{elmentett-fajl}
