--- a/dolgozat/fejezetek/6_osszegzes.tex
+++ b/dolgozat/fejezetek/6_osszegzes.tex
@@ -50,3 +50,5 @@ Egy IDE sok mozgó részből áll, és ezt kezdetben nem láttam át.
 Ennek ellenére sokat tanultam a fejlesztői környezetek felépítéséről, hogy hogyan működnek,
 és ha még egyszer neki kellene vágnom ennek a projektnek, akkor úgy gondolom,
 hogy sikerülne felépíteni egy igazi Rust IDE-t.
+
+% TODO: A felsorolt tapasztalatok mindenképpen jók. Érdemes lenne kicsit objektívabban összefoglalni majd a dolgozat eredményeit, a későbbi fejlesztési lehetőségeket.
