--- a/dolgozat/feladatkiiras/feladatkiiras.tex
+++ b/dolgozat/feladatkiiras/feladatkiiras.tex
@@ -11,26 +11,25 @@ Alkalmazott Matematikai Intézeti Tanszék\hspace*{4cm}\hfil \textbf{Szám:}
 \vskip 0.5cm
 Varga Dániel (DVJYP8) programtervező informatikus.\newline
 
-\noindent\textbf{A szakdolgozat tárgyköre:} Rust, ... \newline
+\noindent\textbf{A szakdolgozat tárgyköre:} Rust programozási nyelv, fejlesztőkörnyezetek \newline
 
 \noindent\textbf{A szakdolgozat címe:} Integrált fejlesztőkörnyezet készítése a Rust programozási nyelvhez \newline
 
 \noindent\textbf{A feladat részletezése:}
 
-\bigskip
-
-...
-
-\medskip
-
-...
+\begin{itemize}
+    \item A Rust egy aránylag új, hardverközeli programozási nyelv. A dolgozatban részletesen be kell mutatni a nyelv sajátosságait, az okokat, amelyek szükségessé tették, hogy létrejöjjön.
+    \item A Rust nyelvet össze kell hasonítani más programozási nyelvekkel. Ez elsősorban a C és C++ nyelveket jelenti, mivel a natív nyelvek közül ezek az elterjedtebbek, tovább a Rust célzottan igyekszik azok hibáit és hiányosságait javítani.
+    \item A cél egy integrált fejlesztőkörnyezet létrehozása a programozási nyelvhez. Ehhez meg kell vizsgálni, hogy a jelenlegi fejlesztőkörnyezetek milyen eszközkészletre építkeznek. Ezt követően ki kell választani azokat az eszközöket, melyek segítségével elkészíthető az új fejlesztőkörnyezet.
+    \item A szoftver és annak fejlesztési folyamatának dokumentálásán túl felhasználói útmutató készítésére is szükség van.
+\end{itemize}
 
 \vfill
 
 \noindent\textbf{Témavezető:} Piller Imre (egyetemi tanársegéd) \newline
 
 \noindent\textbf{A feladat kiadásának ideje:}
-2018. ???
+2018. február 25.
 \newline
 
 %\noindent\textbf{A feladat beadásának határideje:}
@@ -39,7 +38,7 @@ Varga Dániel (DVJYP8) programtervező informatikus.\newline
 
 \hbox to \hsize{\hfil{\hbox to 6cm {\dotfill}\hbox to 1cm{}}}
 
-\hbox to \hsize{\hfil\hbox to 3cm {szakfelelõs}\hbox to 2cm{}}
+\hbox to \hsize{\hfil\hbox to 3cm {szakfelelős}\hbox to 2cm{}}
 
 \newpage
 
